scrollbar fix 1

--- a/Stella/src/uicomponents/login-window/login-window.component.less
+++ b/Stella/src/uicomponents/login-window/login-window.component.less
@@ -8,6 +8,17 @@
     align-items: center;
     justify-content: center;
 
+    ::-webkit-scrollbar {
+        -webkit-appearance: none;
+        width: 0px;
+      }
+      
+    //   ::-webkit-scrollbar-thumb {
+    //     border-radius: 4px;
+    //     background-color: rgba(0, 0, 0, .5);
+    //     box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+    //   }
+
 
     .login-window {
         background-color: rgb(255, 243, 222);
